# UH_Soundscapes

./: .gitignore  README.md  pyproject.toml  pyproject_cson.toml
docs/: changelog.md
maps/: guam_data_plot.py  guam_heat_map.html  guam_heat_map.py  guam_map.html  kml.py
maps/skyfortress/: read_skyfortress.py  skyfortress.json  skyfotress_tracks.html
notebooks/: ESC50_tutorial_16kHz.pkl  ESC50_tutorial_800Hz.pkl  ESC50_tutorial_8kHz.pkl  HiClass_tutorial.ipynb  OREX_tutorial.npz  OREX_tutorial.pkl  astra_tutorial_00.ipynb  dataset_fusion_tutorial.ipynb  esc50_tutorial_00.ipynb  orex_tutorial_00.ipynb  reader_tutorial.ipynb  shared_tutorial_00.ipynb
sandbox/: outlier_detection.py  visualizations.py
sandbox/milton/: qi1_sig_cwt_entropy.py  visualizations.py
sandbox/milton/cson/: qi0_config_guam.py  qi1_sig_cwt_entropy.py
sandbox/sarah/: ASTRA_ART-1_1637620009.pkl  ASTRA_tutorial.pkl  SHAReD_event26.pkl  SHAReD_tutorial.pkl  astra_tutorial_00.ipynb  dataset_standardization.py  esc50_tutorial_00.ipynb  read_astra_rockets.py  read_esc50_noise.py  read_orex_hypersonic.py  read_shared_explosions.py  shared_tutorial_00.ipynb  standard_labels.py
sandbox/tyler/: astra_reader.py  data_processing.py  dataset_reader.py  dataset_standardization.py  esc50_reader.py  kml_files.py  plot_utils.py  shared_explosions_reader.py  test_kml.py
scripts/: clean.sh
soundscapes/: astra_reader.py  data_processing.py  dataset_reader.py  dataset_standardization.py  esc50_reader.py  orex_reader.py  orex_reader_pkl.py  shared_explosions_reader.py  standard_labels.py
udl/: push.py  sample_notification_post.json
udl/transform/: README.md  create_map_output_transformed_json.py  json_schema_mapper.py  output.json  sample_udl_payload.json  track-map.json  udl-service-observation.json  udl-service-track.json
uh_soundscapes/: astra_reader.py  dataset_reader.py  esc50_reader.py  orex_reader.py  shared_explosions_reader.py  standard_labels.py  test_readers.py
uh_soundscapes/notebooks/: astra_tutorial_00.ipynb  shared_tutorial_00.ipynb
