# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "UH_Soundscapes"
version = "0.1"
authors = [
    { name = "ISLA, UH" }
]
description = "Read audio data for an event, process it, and create an exportable product."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"

# Please specify dependencies in alphabetical order
# quantum-inferno brings matplotlib, numpy, scipy, and setuptools with it.
# put specific versions of those modules here, if needed.
dependencies = [
    "folium>=0.19.5", # Folium is a library for creating interactive maps using Leaflet.js.
    "ipykernel>=6.30.0", # ipykernel is used to run jupyter notebooks
    "pandas>=2.1.3", # Pandas is a library for data manipulation and analysis in Python.
    "ipykernel>=6.30.0", " Jupyter dependency
    "quantum-inferno>=1.2.0", # Quantum Inferno is a library for quantum computing tasks.
]

[project.urls]
homepage = "https://github.com/ISLA-UH/UH_Soundscapes"

[tool.setuptools.packages.find]
include = ["UH_Soundscapes"]